--- a/api/tests/integration/identification_tasks/list.tavern.yml
+++ b/api/tests/integration/identification_tasks/list.tavern.yml
@@ -6,18 +6,15 @@ includes:
 marks:
   - usefixtures:
     - api_live_url
+    - app_user_token
     - token_user
 
 stages:
-  - id: signup
-    type: ref
-  - id: login
-    type: ref
   - name: List method returns not exist for mobile users
     request:
       url: "{api_live_url}/{endpoint}/"
       headers:
-        Authorization: "Bearer {token}"
+        Authorization: "Bearer {app_user_token}"
       method: "GET"
     response:
       status_code: 403
@@ -50,7 +47,7 @@ marks:
     - token_user_can_view
 
 stages:
-  - name: User without perm view can not retrieve
+  - name: User with perm view can retrieve
     request:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
@@ -74,7 +71,7 @@ marks:
     - token_user_can_view
 
 stages:
-  - name: User with perm view can not retrieve
+  - name: User with regular perm view can not retrieve archived identification tasks.
     request:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
@@ -102,7 +99,7 @@ marks:
     - token_user_can_view_archived_identificationtasks
 
 stages:
-  - name: User with perm view can not retrieve
+  - name: User with perm view arcjoved can retrieve archived identification tasks.
     request:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
