--- a/api/tests/integration/identification_tasks/annotations/update.tavern.yml
+++ b/api/tests/integration/identification_tasks/annotations/update.tavern.yml
@@ -5,10 +5,11 @@ includes:
 
 marks:
   - usefixtures:
+    - endpoint
     - api_live_url
-    - app_user_token
-    - identification_task
+    - annotation
     - token_user_can_change
+    - app_user_token
   - parametrize:
       key: method
       vals:
@@ -18,7 +19,7 @@ marks:
 stages:
   - name: Update is disabeld for mobile users
     request:
-      url: "{api_live_url}/{endpoint}/{identification_task.pk}/"
+      url: "{api_live_url}/{endpoint}/{annotation.pk}/"
       headers:
         Authorization: "Bearer {app_user_token}"
       method: "{method}"
@@ -26,13 +27,13 @@ stages:
       status_code: 403
   - name: Update is disabeld for non auth users
     request:
-      url: "{api_live_url}/{endpoint}/{identification_task.pk}/"
+      url: "{api_live_url}/{endpoint}/{annotation.pk}/"
       method: "{method}"
     response:
       status_code: 403
   - name: Update is disabeld users even with permissions
     request:
-      url: "{api_live_url}/{endpoint}/{identification_task.pk}/"
+      url: "{api_live_url}/{endpoint}/{annotation.pk}/"
       headers:
         Authorization: "Token {token_user_can_change}"
       method: "{method}"
