--- a/api/tests/integration/taxa/update.tavern.yml
+++ b/api/tests/integration/taxa/update.tavern.yml
@@ -7,7 +7,7 @@ marks:
   - usefixtures:
     - api_live_url
     - app_user_token
-    - identification_task
+    - taxon_root
     - token_user_can_change
   - parametrize:
       key: method
@@ -18,21 +18,21 @@ marks:
 stages:
   - name: Update is disabeld for mobile users
     request:
-      url: "{api_live_url}/{endpoint}/{identification_task.pk}/"
+      url: "{api_live_url}/{endpoint}/{taxon_root.pk}/"
       headers:
         Authorization: "Bearer {app_user_token}"
       method: "{method}"
     response:
-      status_code: 403
+      status_code: 405
   - name: Update is disabeld for non auth users
     request:
-      url: "{api_live_url}/{endpoint}/{identification_task.pk}/"
+      url: "{api_live_url}/{endpoint}/{taxon_root.pk}/"
       method: "{method}"
     response:
-      status_code: 403
+      status_code: 401
   - name: Update is disabeld users even with permissions
     request:
-      url: "{api_live_url}/{endpoint}/{identification_task.pk}/"
+      url: "{api_live_url}/{endpoint}/{taxon_root.pk}/"
       headers:
         Authorization: "Token {token_user_can_change}"
       method: "{method}"
