--- a/api/tests/integration/identification_tasks/delete.tavern.yml
+++ b/api/tests/integration/identification_tasks/delete.tavern.yml
@@ -13,7 +13,7 @@ marks:
 stages:
   - name: Delete is disabeld for mobile users
     request:
-      url: "{api_live_url}/{endpoint}/{identification_task.pk}/"
+      url: "{api_live_url}/{endpoint}/{identification_task.report.pk}/"
       headers:
         Authorization: "Bearer {app_user_token}"
       method: "DELETE"
@@ -21,13 +21,13 @@ stages:
       status_code: 403
   - name: Delete method non authenticated users
     request:
-      url: "{api_live_url}/{endpoint}/{identification_task.pk}/"
+      url: "{api_live_url}/{endpoint}/{identification_task.report.pk}/"
       method: "DELETE"
     response:
       status_code: 403
   - name: Delete method authenticated even users with permissions
     request:
-      url: "{api_live_url}/{endpoint}/{identification_task.pk}/"
+      url: "{api_live_url}/{endpoint}/{identification_task.report.pk}/"
       headers:
         Authorization: "Token {token_user_can_delete}"
       method: "DELETE"
