--- a/api/tests/integration/countries/delete.tavern.yml
+++ b/api/tests/integration/countries/delete.tavern.yml
@@ -6,18 +6,30 @@ includes:
 marks:
   - usefixtures:
     - api_live_url
+    - app_user_token
+    - token_user_can_delete
     - country
 
 stages:
-  - id: signup
-    type: ref
-  - id: login
-    type: ref
   - name: Delete method return 405
     request:
       url: "{api_live_url}/{endpoint}/{country.pk}/"
       headers:
-        Authorization: "Bearer {token}"
+        Authorization: "Bearer {app_user_token}"
+      method: "DELETE"
+    response:
+      status_code: 405
+  - name: Delete method non authenticated users
+    request:
+      url: "{api_live_url}/{endpoint}/{country.pk}/"
+      method: "DELETE"
+    response:
+      status_code: 401
+  - name: Delete method authenticated even users with permissions
+    request:
+      url: "{api_live_url}/{endpoint}/{country.pk}/"
+      headers:
+        Authorization: "Token {token_user_can_delete}"
       method: "DELETE"
     response:
       status_code: 405
