--- a/api/tests/integration/countries/list.tavern.yml
+++ b/api/tests/integration/countries/list.tavern.yml
@@ -6,17 +6,32 @@ includes:
 marks:
   - usefixtures:
     - api_live_url
+    - app_user_token
+    - token_user
+    - country
 
 stages:
-  - id: signup
-    type: ref
-  - id: login
-    type: ref
-  - name: List method returns 404
+  - name: List is allowed for mobile users
     request:
       url: "{api_live_url}/{endpoint}/"
       headers:
-        Authorization: "Bearer {token}"
+        Authorization: "Bearer {app_user_token}"
       method: "GET"
     response:
-      status_code: 404
+      status_code: 200
+      json: !force_format_include "{response_list_data_validation}"
+  - name: Non auth user can not list
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      method: "GET"
+    response:
+      status_code: 401
+  - name: User without perm view can list
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      method: "GET"
+      headers:
+        Authorization: "Token {token_user:s}"
+    response:
+      status_code: 200
+      json: !force_format_include "{response_list_data_validation}"
